fix: update margins across various components for improved spacing and layout

--- a/src/app/about/about.module.scss
+++ b/src/app/about/about.module.scss
@@ -26,7 +26,7 @@ $breakpoint-small: 768px;
 }
 
 .aboutPage{
- margin-top: 2rem;
+ margin-top: 3rem;
 }
 
 @keyframes float {
