--- a/src/app/contact/contact.module.scss
+++ b/src/app/contact/contact.module.scss
@@ -8,6 +8,7 @@
     max-width: 1200px;
     width: 100%;  // Aumenta este valor
     margin: 0 auto;
+    margin-top: 2rem;
     box-sizing: border-box;
 
     .heading {
