--- a/src/app/faqs/faqs.module.scss
+++ b/src/app/faqs/faqs.module.scss
@@ -44,6 +44,7 @@
     font-weight: bold;
     margin-bottom: 0.5rem;
     text-align: center;
+    margin-top: 2rem;
   }
   
   .subheading {
