--- a/src/app/gallery/Gallery.module.scss
+++ b/src/app/gallery/Gallery.module.scss
@@ -76,7 +76,7 @@
     color: #d3d3d3;
     /* Cambiado a gris claro para mayor contraste con el fondo negro */
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 3rem;
     /* Reducido el margen superior */
     text-align: center;
     font-size: 1.6rem;
