--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -22,6 +22,7 @@
 .heroSection {
     width: 100%;
     display: flex;
+    margin-top: 2rem;
     justify-content: center;
     padding: 2rem 0;
 
