--- a/src/app/terms/terms.module.scss
+++ b/src/app/terms/terms.module.scss
@@ -9,6 +9,7 @@
 }
 
 .heading {
+  margin-top: 2rem;
   font-size: 2.5rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
